--- a/DiscoveryServer/src/main/resources/application.properties
+++ b/DiscoveryServer/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-server.port = 8761
+server.port=8761
 eureka.client.register-with-eureka=false
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 #Telling the client to not fetch registry from other services.
 eureka.client.fetch-registry=false
 
-eureka.instance.prefer-ip-address=true
+eureka.instance.preferIpAddress=true
+eureka.instance.hostname=localhost
+
+management.endpoints.web.exposure.include=*
+
 
 
