--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
 spring.application.name=products-service
+eureka.instance.hostname=localhost
+
+management.endpoints.web.exposure.include=*
