--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#setting server.port so that randomly available port number will be picked up
+server.port=0
+eureka.instance.instance-id=${spring.application.name}:${instanceid:${random.value}}
+
 #Address Registering with Eureka Server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
