--- a/ProductsService/pom.xml
+++ b/ProductsService/pom.xml
@@ -38,6 +38,14 @@
 			<artifactId>axon-spring-boot-starter</artifactId>
 			<version>4.5.9</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<!-- Dependecy required as it seems internal methods are dependent on it -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.1-jre</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
