--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.application.name=products-service
 eureka.instance.hostname=localhost
 
 management.endpoints.web.exposure.include=*
+
+
+###Quering Database details
+spring.datasource.url=jdbc:h2:mem:products;
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.username=root
+spring.datasource.password=root
