--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -20,3 +20,9 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+###Validator settings
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+
