feat: Set Based Validation (Lookuptable etc), Interceptor and Logs added

--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -25,4 +25,8 @@ spring.datasource.password=root
 server.error.include-message=always
 server.error.include-binding-errors=always
 
+#Assigning product-group to subscribing event processor
+#product-group is one of the @ProcessingGroup
+axon.eventhandling.processors.product-group.mode=subscribing
+
 
