feat: basic initial flow for creating order and saving entity in Query DB

--- a/OrdersService/src/main/resources/application.properties
+++ b/OrdersService/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+#setting server.port so that randomly available port number will be picked up
+server.port=0
+eureka.instance.instance-id=${spring.application.name}:${instanceid:${random.value}}
 
+#Address Registering with Eureka Server
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.application.name=orders-service
+eureka.instance.hostname=localhost
+
+management.endpoints.web.exposure.include=*
+
+
+###Quering Database details
+spring.datasource.url=jdbc:h2:mem:orders;
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+###Validator settings
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+#Assigning product-group to subscribing event processor
+#product-group is one of the @ProcessingGroup
+axon.eventhandling.processors.order-group.mode=subscribing
