--- a/PaymentsService/pom.xml
+++ b/PaymentsService/pom.xml
@@ -41,7 +41,7 @@
 			<optional>true</optional>
 		</dependency>
 		
-				<!-- https://mvnrepository.com/artifact/org.axonframework/axon-spring-boot-starter -->
+		<!-- https://mvnrepository.com/artifact/org.axonframework/axon-spring-boot-starter -->
 		<dependency>
 			<groupId>org.axonframework</groupId>
 			<artifactId>axon-spring-boot-starter</artifactId>
@@ -55,6 +55,14 @@
 			<artifactId>guava</artifactId>
 			<version>31.1-jre</version>
 		</dependency>
+		
+		<!-- Common Dependency Across Microservices-->
+		<dependency>
+			<groupId>com.cheapbuy</groupId>
+			<artifactId>core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
