--- a/PaymentsService/src/main/resources/application.properties
+++ b/PaymentsService/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=0
 spring.application.name=payments-service
+
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:h2:mem:payments;
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
