feat: Basic snapshotting functionality added

--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -29,4 +29,6 @@ server.error.include-binding-errors=always
 #product-group is one of the @ProcessingGroup
 axon.eventhandling.processors.product-group.mode=subscribing
 
+logging.level.org.axonframework.axonserver.connector.event.axon.AxonServerEventStore=DEBUG
+
 
