feat: Endpoint exposed for replay events functionality in Products microservice

--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -28,6 +28,9 @@ server.error.include-binding-errors=always
 #Assigning product-group to subscribing event processor
 #product-group is one of the @ProcessingGroup
 axon.eventhandling.processors.product-group.mode=subscribing
+# As events cannot be replayed in subscribing please comment out the the above property and uncomment below.
+#After replay is completed , the mode can be reset back to subscribing
+#axon.eventhandling.processors.product-group.mode=tracking
 
 logging.level.org.axonframework.axonserver.connector.event.axon.AxonServerEventStore=DEBUG
 
